# sprachy

./: .env.example  .gitignore  .prettierrc  README.md  app.vue  babel.config.js  data  drizzle.config.ts  globalTypes.d.ts  img  jest.config.js  ley.config.js  manage.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  schema.fql  schema.sql  shims.d.ts  svelte.config.js  tsconfig.json  types.d.ts  vetur.config.js  vite.config.js  vitest.config.js  vitest.config.ts  webpack.client.config.js  webpack.config.js  webpack.server.config.js  wrangler.toml
assets/: app.css  mlquestions.json
client/: AdminLayout.svelte  AdminLayout.vue  AdminPatternsPage.vue  AdminUsersPage.vue  App.svelte  App.vue  Avatar.svelte  Avatar.vue  CanvasEffects.ts  ClientAPI.ts  ConfirmResetPasswordPage.svelte  DLine.vue  Dialogue.vue  DialogueExample.svelte  DialogueExampleMessage.svelte  EditPatternPage.vue  ErrorHandler.svelte  ErrorPage.svelte  ExerciseView.vue  FAQPage.svelte  FAQPage.vue  FillblankCard.svelte  FillblankCard.vue  FreePracticePage.svelte  FrontPage.svelte  FrontPage.vue  GlobalErrorHandler.ts  HTTPProvider.ts  HomePage.svelte  HomePage.vue  HoverTranslate.vue  InlineTranslation.svelte  LTable.svelte  LTable.vue  LTableTranslation.svelte  LearnPage.svelte  LearnPage.vue  LoginPage.svelte  LoginPage.vue  MasteryProgressBar.vue  (+57 more)
commands/: adminify.ts  resetdb.ts  shell.ts
common/: Exercise.ts  Pattern.ts  api.d.ts  characters.ts  content.ts  definePattern.ts  generator.ts  time.ts  (+6 more)
nlp/: README  find_related_nouns.py  generate.py  poetry.toml  pyproject.toml
(+675 files in other folders)
