[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Toggle <toggledy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.7"
gender-determinator = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
